5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1664_2973.log
== TEST (2019-04-16 11:11:56) 
-- CODE:
m = int(input("Posicao inicial"))
ms = int(input("Velocidade do objeto"))
s = int(input("Tempo de deslocamento"))

vm = m - (ms*s)

if(vm>100):
	print("ACIMA")
else:
	print("OK")
-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:14:15) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

vm = m - (ms*s)

if(vm>100):
	x = "ACIMA"
else:
	x = "OK"

print(vm)
print(x)
-- OUTPUT:
-7198
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:14:30) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

vm = m + (ms*s)

if(vm>100):
	x = "ACIMA"
else:
	x = "OK"

print(vm)
print(x)
-- EXECUTION TIME:
0.222913
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:14:31) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

vm = m + (ms*s)

if(vm>100):
	x = "ACIMA"
else:
	x = "OK"

print(vm)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:14:58) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

vm = m + (ms*s)

if(vm>=100):
	x = "ACIMA"
else:
	x = "OK"

print(vm)
print(x)
-- EXECUTION TIME:
0.159881
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:14:59) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

vm = m + (ms*s)

if(vm>=100):
	x = "ACIMA"
else:
	x = "OK"

print(vm)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:15:10) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

vm = m + (ms*s)

if(vm>=100):
	x = "ACIMA"
else:
	x = "OK"

print(vm)
print(x)
-- EXECUTION TIME:
0.276087
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:15:24) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

vm = m + (ms*s)

if(vm>=100):
	x = "ACIMA"
else:
	x = "OK"

print(vm)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:15:49) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

vm = m + (ms*s)

if(vm<=100):
	x = "OK"
else:
	x = "ACIMA"

print(vm)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:15:59) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

vm = m + (ms*s)

if(vm<=100):
	x = "OK"
else:
	x = "ACIMA"

print(vm)
print(x)
-- EXECUTION TIME:
0.270578
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:16:00) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

vm = m + (ms*s)

if(vm<=100):
	x = "OK"
else:
	x = "ACIMA"

print(vm)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:16:28) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(vm<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(vm<=100):
NameError: name 'vm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:16:41) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:16:46) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:16:47) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.151672
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:16:52) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.158948
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:16:53) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:17:22) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "ok"
else:
	x = "acima"

print(S)
print(x)
-- OUTPUT:
7202
acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:17:29) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "ok"
else:
	x = "acima"

print(S)
print(x)
-- EXECUTION TIME:
0.145767
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
acima
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
acima
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
acima
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:18:20) 
-- CODE:
m = float(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.210087
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:18:21) 
-- CODE:
m = float(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.185288
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:18:28) 
-- CODE:
m = float(input("Posicao inicial:"))
ms = float(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.119998
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
Posicao inicial:Velocidade do objeto:Tempo de deslocamento:7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:18:29) 
-- CODE:
m = float(input("Posicao inicial:"))
ms = float(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.149622
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:18:30) 
-- CODE:
m = float(input("Posicao inicial:"))
ms = float(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- OUTPUT:
7202.0
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:19:22) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.233535
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:19:23) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- OUTPUT:
7202.0
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:19:39) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:19:47) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.24392
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:20:45) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.18655
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:20:46) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:21:06) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:21:12) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.161074
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:21:30) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = float(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.196992
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:21:30) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = float(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- OUTPUT:
7202.0
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:21:51) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

int(print(S))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    int(print(S))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:22:06) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(int(S))
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:22:12) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(int(S))
print(x)
-- EXECUTION TIME:
0.163763
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:22:24) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(int(S))
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:22:58) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- OUTPUT:
7202.0
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:23:05) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.183389
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:23:10) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:23:17) 
-- CODE:
m = int(input("Posicao inicial:"))
ms = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = m + (ms*s)

if(S<=100):
	x = "OK"
else:
	x = "ACIMA"

print(S)
print(x)
-- EXECUTION TIME:
0.163304
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:26:10) 
-- CODE:
so = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = so + (v*t)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = so + (v*t)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:26:25) 
-- CODE:
so = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = so + (v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:26:32) 
-- CODE:
so = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = so + (v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- EXECUTION TIME:
0.14311
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:26:40) 
-- CODE:
so = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = so + (v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:27:13) 
-- CODE:
so = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = so + (v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202.0
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:27:16) 
-- CODE:
so = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = so + (v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- EXECUTION TIME:
0.175502
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:27:22) 
-- CODE:
so = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = float(input("Tempo de deslocamento:"))

S = so + (v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(int(S)
print(msg)
-- EXECUTION TIME:
0.16878
-- ERROR:
  File "/home/codebench/codes/1664/2973/main.py", line 13
    print(msg)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:27:35) 
-- CODE:
so = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = (input("Tempo de deslocamento:"))

S = so + (v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = so + (v*s)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:27:54) 
-- CODE:
so = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = (input("Tempo de deslocamento:"))

S = so+(v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = so+(v*s)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:28:17) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = (input("Tempo de deslocamento:"))

S = x +(v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = x +(v*s)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:28:40) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x +(v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:28:55) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x +(v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- EXECUTION TIME:
0.14457
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:29:01) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x +(v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:29:38) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x +((v/s)*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
62.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:29:45) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x +((v/s)*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- EXECUTION TIME:
0.12417
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
62.0
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
42.0
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
123.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:30:11) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x +((x/s)*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
4.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:30:13) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x +((x/s)*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- EXECUTION TIME:
0.139233
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
4.0
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
2.0
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
6.0
OK
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:31:00) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

v1 = v/s
S = x + (v1*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
62.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:31:36) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x + (v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:31:43) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x + (v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:32:37) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x + (v*t)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = x + (v*t)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:32:52) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x + (v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:32:58) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x + (v*s)

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:35:05) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x + v*t

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- EXECUTION TIME:
0.127293
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2973/main.py", line 5, in <module>
    S = x + v*t
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:35:07) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x + v*t

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = x + v*t
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:35:20) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x + v*s

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:36:01) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x + v*s

if(S<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:36:55) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x + v*s

if(v<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:37:00) 
-- CODE:
x = int(input("Posicao inicial:"))
v = int(input("Velocidade do objeto:"))
s = int(input("Tempo de deslocamento:"))

S = x + v*s

if(v<=100):
	msg = "OK"
else:
	msg = "ACIMA"

print(S)
print(msg)
-- EXECUTION TIME:
0.135883
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
